[tool.poetry]
name = "command_pattern_python"
version = "0.1.0"
description = ""
authors = ["Marcel Ochs <marc3lox@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.17"
psycopg2 = "^2.8.5"
python-language-server = "^0.33.0"
flake8 = "^3.8.2"
black = "^19.10b0"
mypy = "^0.770"
flask = "^1.1.2"
graphene-sqlalchemy = "^2.3.0"
fastapi = "^0.58.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
